| Summary: | ASTERISK-28797: [patch] tcptls: Fix notice when TLS is enabled but not configured. | ||
| Reporter: | Alexander Traud (traud) | Labels: | patch |
| Date Opened: | 2020-04-01 08:32:38 | Date Closed: | 2020-05-11 05:25:42 |
| Priority: | Trivial | Regression? | |
| Status: | Closed/Complete | Components: | Core/General |
| Versions: | 13.32.0 16.9.0 17.3.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) no_ssl_error.patch | |
| Description: | ASTERISK-27394 introduced a log message when Asterisk was configured (and build) without the OpenSSL Development Headers. That message is printed when a TLS _server_ is attempted by the administrator, for example through {{tlsenable=yes}} in the configuration file {{sip.conf}}.
However 1. the log message did not end with a carriage return, resulting the next log message to be printed in the same line, and 2. another log message existed when the administrator attempted a TLS _client_. The attached patch adds the missing carriage return. Furthermore it uses the same wording and severity (not notice but error) for both log messages. This not only improves consistency, when both cases happen (TLS server and client requested by administrator) but also allows the administrator to distinguish which message belongs to the server and which to the client case. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2020-04-01 08:32:39.735-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Friendly Automation (friendly-automation) 2020-05-11 05:25:43.473-0500 Change 14074 merged by Friendly Automation: tcptls: Fix notice when TLS is enabled but not supported. [https://gerrit.asterisk.org/c/asterisk/+/14074|https://gerrit.asterisk.org/c/asterisk/+/14074] By: Friendly Automation (friendly-automation) 2020-05-11 05:49:22.490-0500 Change 14038 merged by Joshua Colp: tcptls: Fix notice when TLS is enabled but not supported. [https://gerrit.asterisk.org/c/asterisk/+/14038|https://gerrit.asterisk.org/c/asterisk/+/14038] By: Friendly Automation (friendly-automation) 2020-05-11 06:10:23.481-0500 Change 14037 merged by Friendly Automation: tcptls: Fix notice when TLS is enabled but not supported. [https://gerrit.asterisk.org/c/asterisk/+/14037|https://gerrit.asterisk.org/c/asterisk/+/14037] By: Friendly Automation (friendly-automation) 2020-05-11 06:16:52.911-0500 Change 14073 merged by Joshua Colp: tcptls: Fix notice when TLS is enabled but not supported. [https://gerrit.asterisk.org/c/asterisk/+/14073|https://gerrit.asterisk.org/c/asterisk/+/14073] | ||